Fix scrolling issue on mobile devices

--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,5 +1,5 @@
 agm-map {
-  height: 100vh;
+  height: 100%;
   position: absolute;
   top: 0;
   bottom: 0;
